# 3D_Vision_TeamProject

./: CMakeLists.txt  CMakeSettings.json  Check_List_4Coursework.md  Pre-Built_Version_augmentedReality.exe.lnk  Pre_Built_version.bat  README.md  ReadMe.md  To_Do_List_Temporary.md  headers.h  runMe_toSetup_OpenCV.bat
backups/include/: camera_calibration.hpp  common.h  feat_extractor.hpp  feature_extraction.hpp  feature_matching.hpp  other.hpp  planar_pose_estimation.hpp
backups/src/: camera_calibration.cpp  feature_extraction.cpp  feature_matching.cpp  main.cpp  object_integration.cpp  other.cpp  planar_pose_estimation.cpp  ransac.cpp
gui/: ARi_gui.bat  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
gui/builds/: CMakeCache.txt  build.ninja  cmake_install.cmake
gui/builds/ARi_v04_autogen/: deps
gui/builds/ARi_v04_autogen/EWIEGA46WW/: moc_introwindow.cpp  moc_introwindow.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
gui/builds/ARi_v04_autogen/include/: ui_mainwindow.h
include/: camCalibration.hpp  camera_calibration.hpp  common.h  feature_extraction.hpp  feature_matching.hpp  object_integration.hpp  other.hpp  planar_pose_estimation.hpp  ransac.hpp
projection/: ar_main.py  project.bat  projector.yml  setup_env.bat
projection/data/: calibration_params.csv  poseMatrices.csv
projection/output/: output.avi
projection/vault/: project.bat
resources/: calibration_params.csv  calibration_params.yml
resources/3D_model/: House2.mtl  bee2.mtl  mustang.mtl
resources/3D_model/bumblebee/source/: beee.fbx  beee2.mtl
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: camCalibration.cpp  camera_calibration.cpp  feature_extraction.cpp  feature_matching.cpp  main.cpp  other.cpp  planar_pose_estimation.cpp
